--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Responsive Banner</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
@@ -17,8 +17,8 @@
     <div>
       <p>An amazingly species rich, varied climate planet, the third, and only habitable, planet in the Solar System, located about 25 000 ly from the Galactic Centre.</p>
     </div>
-    <div>
-      <p>Book a star cruise</p>
+    <div class=".btn .btn-ghost">
+      <a>Book a star cruise</a>
     </div>
   </main>
 </body>
