This commit will add an image

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <body>
   <main>
     <div>
+      <img src="images/earth-horizon.jpg" alt="">
+    </div>
+    <div>
       <h1>The Planet Earth</h1>
     </div>
     <div>
