this commit will add a wrapper to the page

--- a/index.html
+++ b/index.html
@@ -10,17 +10,15 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <main>
+  <main class="wrapper">
     <div>
-      <img src="images/earth-horizon.jpg" alt="">
+      <img src="images/earth-horizon.jpg" class="img-flex" alt="">
     </div>
     <div>
       <h1>The Planet Earth</h1>
-    </div>
-    <div>
       <p>An amazingly species rich, varied climate planet, the third, and only habitable, planet in the Solar System, located about 25 000 ly from the Galactic Centre.</p>
     </div>
-    <div class=".btn .btn-ghost">
+    <div class="btn btn-ghost">
       <a>Book a star cruise</a>
     </div>
   </main>
