--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <div>
       <img src="images/earth-horizon.jpg" class="img-flex" alt="">
     </div>
-    <div>
-      <h1>The Planet Earth</h1>
-      <p>An amazingly species rich, varied climate planet, the third, and only habitable, planet in the Solar System, located about 25 000 ly from the Galactic Centre.</p>
+    <div class="island-1-2">
+      <h1 class="terra">The Planet Earth</h1>
+      <p class="giga">An amazingly species rich, varied climate planet, the third, and only habitable, planet in the Solar System, located about 25 000 ly from the Galactic Centre.</p>
     </div>
-    <div class="btn btn-ghost">
-      <a>Book a star cruise</a>
+    <div class="island-1-2">
+      <a class="btn btn-ghost">Book a star cruise</a>
     </div>
   </main>
 </body>
