--- a/index.html
+++ b/index.html
@@ -10,16 +10,20 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <main class="wrapper">
-    <div>
+  <main class="relative masthead">
+    <div class="banner">
       <img src="images/earth-horizon.jpg" class="img-flex" alt="">
     </div>
-    <div class="island-1-2">
-      <h1 class="terra">The Planet Earth</h1>
-      <p class="giga">An amazingly species rich, varied climate planet, the third, and only habitable, planet in the Solar System, located about 25 000 ly from the Galactic Centre.</p>
-    </div>
-    <div class="island-1-2">
-      <a class="btn btn-ghost">Book a star cruise</a>
+    <div class="banner-content">
+      <div class="grid grid-middle wrapper">
+        <div class="unit xs-1 s-1 m-1-2 l-1-2 island-1-2">
+          <h1 class="terra">The Planet Earth</h1>
+          <p class="giga">An amazingly species rich, varied climate planet, the third, and only habitable, planet in the Solar System, located about 25 000 ly from the Galactic Centre.</p>
+        </div>
+        <div class="unit xs-1 s-1 m-1-2 l-1-2 island-1-2 banner-btn">
+          <a class="btn btn-ghost">Book a star cruise</a>
+        </div>
+      </div>
     </div>
   </main>
 </body>
