--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <p class="giga">An amazingly species rich, varied climate planet, the third, and only habitable, planet in the Solar System, located about 25 000 ly from the Galactic Centre.</p>
         </div>
         <div class="unit xs-1 s-1 m-1-2 l-1-2 island-1-2 banner-btn">
-          <a class="btn btn-ghost">Book a star cruise</a>
+          <a class="btn btn-ghost" href="#">Book a star cruise</a>
         </div>
       </div>
     </div>
