--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="banner-content">
       <div class="grid grid-middle wrapper">
         <div class="unit xs-1 s-1 m-1-2 l-1-2 island-1-2">
-          <h1 class="yotta">The Planet Earth</h1>
-          <p class="giga">An amazingly species rich, varied climate planet, the third, and only habitable, planet in the Solar System, located about 25 000 ly from the Galactic Centre.</p>
+          <h1 class="yotta pad-t-1-2 push-1-2 bold">The Planet Earth</h1>
+          <p>An amazingly species rich, varied climate planet, the third, and only habitable, planet in the Solar System, located about 25 000 ly from the Galactic Centre.</p>
         </div>
         <div class="unit xs-1 s-1 m-1-2 l-1-2 island-1-2 banner-btn">
           <a class="btn btn-ghost" href="#">Book a star cruise</a>
